# RetroVault

./: .clang-format  .gitignore  Assets.cpp  Assets.h  CMakeLists.txt  FuseAPI.h  FuseDevice.cpp  FuseDevice.h  FuseMountPoint.cpp  FuseVolume.h  MainTableView.qml  SplashView.qml  VaultProxy.cpp  VaultProxy.h  backend.cpp  backend.h  config.h  debug.cpp  debug.h  main.cpp  main.qml
adapter/: BlockTableModel.cpp  BlockTableModel.h  CMakeLists.txt  DeviceInfo.h  QmlAdapter.cpp  QmlAdapter.h  QmlAdapterTypes.cpp  QmlAdapterTypes.h  SidebarModel.cpp  SidebarModel.h  UsageDisplay.h  VaultProxy.h
assets/icons/: AppIcon.icns
backend/: CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  FuseAPI.h  FuseAdapter.h  FuseDevice.cpp  FuseDevice.h  FuseFileSystemTypes.h  FuseMountPoint.cpp  FuseMountPoint.h  FuseVolume.cpp  FuseVolume.h  Model.cpp  Model.h
controllers/: AppController.cpp  AppController.h  BlockViewController.cpp  BlockViewController.h  CMakeLists.txt  Controller.cpp  Controller.h  CustomController.cpp  CustomController.h  DevicePanelController.cpp  DevicePanelController.h  SidebarController.cpp  SidebarController.h  SidebarModel.cpp  SidebarModel.h  SplashPanelController.cpp  SplashPanelController.h  VolumePanelController.cpp  VolumePanelController.h  WindowController.cpp  WindowController.h
models/: BlockTableModel.cpp  BlockTableModel.h  CMakeLists.txt  Model.cpp  SidebarModel.cpp  SidebarModel.h
proxy/: BlockTableModel.cpp  BlockTableModel.h  CMakeLists.txt  DeviceInfo.cpp  SidebarModel.cpp  SidebarModel.h  UsageDisplay.h  VaultProxy.cpp  VaultProxy.h
qml/: AppWindow.qml  BlockView.qml  ColorInfo.qml  DeviceBlockSelector.qml  DevicePanel.qml  Fonts.qml  Header.qml  LabeledStepper.qml  LayoutTab.qml  Logo.qml  Main.qml  MainMenu.qml  MyToolbar.qml  NavButton.qml  NewMain.qml  Sidebar.qml  SplashView.qml  StatusBar.qml  Style.qml  Toolbar.qml  UIController.qml  VolumePanel.qml  main.qml
qml/components/: BlockView.qml  Busy.qml  BusyButton.qml  DebugRect.qml  Header.qml  IconLink.qml  ImageButton.qml  LabeledStepper.qml  LinkButton.qml  MyToolTip.qml  Spacer.qml  Toast.qml
qml/custom/: AllocScanner.cpp  AllocScanner.h  BaseScanner.cpp  BaseScanner.h  CMakeLists.txt  ColorBar.cpp  ColorBar.h  CustomComponent.cpp  CustomComponent.h  HealthScanner.cpp  HealthScanner.h  MyStyle.cpp  MyStyle.h  Palette.cpp  Palette.h  Scanner.cpp  Scanner.h  UsageDisplay.cpp  UsageDisplay.h  UsageScanner.cpp  UsageScanner.h
qml/device/: DevicePanel.qml
qml/splash/: Logo.qml  SplashPanel.qml  StatusBar.qml
qml/toolbar/: MyToolbar.qml  NavButton.qml
qml/volume/: AllocTab.qml  ColorInfo.qml  HealthTab.qml  LayoutTab.qml  Legend.qml  UsageTab.qml  VolumePanel.qml  VolumeTabBar.qml  VolumeTabs.qml
rvlib/FileSystems/Amiga/: FileSystem.cpp
rvlib/Images/D64/: D64File.h
utlib/: CMakeLists.txt
utlib/include/utl/abilities/: Loggable.h
